--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "link": "react-native link"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.7",
