--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
-  "name": "GadgetLounge",
+  "name": "gadgetlounge",
   "version": "0.0.1",
   "private": true,
+  "description": " ",
+  "author": {
+    "name": "kolynzb",
+    "email": "collinsbenda360@gmail.com",
+    "url": "http://atuhaire.com"
+  },
+  "repository": " ",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
