chore: adjust name and slug

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "gadgetloungeapp",
-    "slug": "gadgetloungeapp",
+    "name": "gadget lounge",
+    "slug": "gadget-lounge",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -22,9 +22,7 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png",
-      "bundler": "metro"
-    },
-    "scheme": "myapp"
+      "favicon": "./assets/favicon.png"
+    }
   }
 }
